KTXGen/KTXGen/Headers/ktx.h


typedef unsigned char ktx_uint8_t;
typedef bool ktx_bool_t;
typedef unsigned __int32 ktx_uint32_t;
typedef          size_t  ktx_size_t;
typedef uint32_t ktx_uint32_t;
typedef   size_t ktx_size_t;
typedef enum ktx_error_code_e {
    KTX_SUCCESS = 0,         
    KTX_FILE_DATA_ERROR,     
    KTX_FILE_ISPIPE,         
    KTX_FILE_OPEN_FAILED,    
    KTX_FILE_OVERFLOW,       
    KTX_FILE_READ_ERROR,     
    KTX_FILE_SEEK_ERROR,     
    KTX_FILE_UNEXPECTED_EOF, 
    KTX_FILE_WRITE_ERROR,    
    KTX_GL_ERROR,            
    KTX_INVALID_OPERATION,   
    KTX_INVALID_VALUE,       
    KTX_NOT_FOUND,           
    KTX_OUT_OF_MEMORY,       
    KTX_TRANSCODE_FAILED,    
    KTX_UNKNOWN_FILE_FORMAT, 
    KTX_UNSUPPORTED_TEXTURE_TYPE, 
    KTX_UNSUPPORTED_FEATURE,  
    KTX_LIBRARY_NOT_LINKED,  
    KTX_DECOMPRESS_LENGTH_ERROR, 
    KTX_DECOMPRESS_CHECKSUM_ERROR, 
    KTX_ERROR_MAX_ENUM = KTX_DECOMPRESS_CHECKSUM_ERROR 
} ktx_error_code_e;
typedef struct ktxKVListEntry* ktxHashList;
typedef struct ktxStream ktxStream;
typedef struct ktxKVListEntry ktxHashListEntry;
typedef enum ktxSupercmpScheme {
    KTX_SS_NONE = 0,            
    KTX_SS_BASIS_LZ = 1,        
    KTX_SS_ZSTD = 2,            
    KTX_SS_ZLIB = 3,            
    KTX_SS_BEGIN_RANGE = KTX_SS_NONE,
    KTX_SS_END_RANGE = KTX_SS_ZLIB,
    KTX_SS_BEGIN_VENDOR_RANGE = 0x10000,
    KTX_SS_END_VENDOR_RANGE = 0x1ffff,
    KTX_SS_BEGIN_RESERVED = 0x20000
} ktxSupercmpScheme;
typedef struct ktxTexture2 {
    KTXTEXTURECLASSDEFN
    ktx_uint32_t  vkFormat;
    ktx_uint32_t* pDfd;
    ktxSupercmpScheme supercompressionScheme;
    ktx_bool_t isVideo;
    ktx_uint32_t duration;
    ktx_uint32_t timescale;
    ktx_uint32_t loopcount;
    struct ktxTexture2_private* _private;  
} ktxTexture2;
  typedef unsigned __int64 ktx_off_t;
  typedef   off_t ktx_off_t;
typedef struct ktxMem ktxMem;
typedef struct ktxStream ktxStream;
enum streamType { eStreamTypeFile = 1, eStreamTypeMemory = 2, eStreamTypeCustom = 3 };
typedef KTX_error_code (*ktxStream_read)(ktxStream* str, void* dst,
                                         const ktx_size_t count);
typedef KTX_error_code (*ktxStream_skip)(ktxStream* str,
                                         const ktx_size_t count);
typedef KTX_error_code (*ktxStream_write)(ktxStream* str, const void *src,
                                          const ktx_size_t size,
                                          const ktx_size_t count);
typedef KTX_error_code (*ktxStream_getpos)(ktxStream* str, ktx_off_t* const offset);
typedef KTX_error_code (*ktxStream_setpos)(ktxStream* str, const ktx_off_t offset);
typedef KTX_error_code (*ktxStream_getsize)(ktxStream* str, ktx_size_t* const size);
typedef void (*ktxStream_destruct)(ktxStream* str);
struct ktxStream
{
    ktxStream_read read;   
    ktxStream_skip skip;   
    ktxStream_write write; 
    ktxStream_getpos getpos; 
    ktxStream_setpos setpos; 
    ktxStream_getsize getsize; 
    ktxStream_destruct destruct; 
    enum streamType type;
    union {
        FILE* file;        
        ktxMem* mem;       
        struct
        {
            void* address;           
            void* allocatorAddress;  
            ktx_size_t size;         
        } custom_ptr;      
    } data;                
    ktx_off_t readpos;     
    ktx_bool_t closeOnDestruct; 
};
typedef ktx_uint32_t ktx_pack_uastc_flags;
typedef struct ktxAstcParams {
    ktx_uint32_t structSize;
    ktx_bool_t verbose;
    ktx_uint32_t threadCount;
    ktx_uint32_t blockDimension;
    ktx_uint32_t mode;
    ktx_uint32_t qualityLevel;
    ktx_bool_t normalMap;
    ktx_bool_t perceptual;
    char inputSwizzle[4];
} ktxAstcParams;
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CompressAstcEx(ktxTexture2* This, ktxAstcParams* params);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CompressAstc(ktxTexture2* This, ktx_uint32_t quality);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_DecodeAstc(ktxTexture2* This);
typedef struct ktxBasisParams {
    ktx_uint32_t structSize;
    ktx_bool_t uastc;
    ktx_bool_t verbose;
    ktx_bool_t noSSE;
    ktx_uint32_t threadCount;
    ktx_uint32_t compressionLevel;
    ktx_uint32_t qualityLevel;
    ktx_uint32_t maxEndpoints;
    float endpointRDOThreshold;
    ktx_uint32_t maxSelectors;
    float selectorRDOThreshold;
    char inputSwizzle[4];
    ktx_bool_t normalMap;
    ktx_bool_t separateRGToRGB_A;
    ktx_bool_t preSwizzle;
    ktx_bool_t noEndpointRDO;
    ktx_bool_t noSelectorRDO;
    ktx_pack_uastc_flags uastcFlags;
    ktx_bool_t uastcRDO;
    float uastcRDOQualityScalar;
    ktx_uint32_t uastcRDODictSize;
    float uastcRDOMaxSmoothBlockErrorScale;
    float uastcRDOMaxSmoothBlockStdDev;
    ktx_bool_t uastcRDODontFavorSimplerModes;
    ktx_bool_t uastcRDONoMultithreading;
} ktxBasisParams;
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CompressBasisEx(ktxTexture2* This, ktxBasisParams* params);
typedef enum ktx_transcode_fmt_e {
        KTX_TTF_ETC1_RGB = 0,
        KTX_TTF_ETC2_RGBA = 1,
        KTX_TTF_BC1_RGB = 2,
        KTX_TTF_BC3_RGBA = 3,
        KTX_TTF_BC4_R = 4,
        KTX_TTF_BC5_RG = 5,
        KTX_TTF_BC7_RGBA = 6,
        KTX_TTF_PVRTC1_4_RGB = 8,
        KTX_TTF_PVRTC1_4_RGBA = 9,
        KTX_TTF_ASTC_4x4_RGBA = 10,
        KTX_TTF_PVRTC2_4_RGB = 18,
        KTX_TTF_PVRTC2_4_RGBA = 19,
        KTX_TTF_ETC2_EAC_R11 = 20,
        KTX_TTF_ETC2_EAC_RG11 = 21,
        KTX_TTF_RGBA32 = 13,
        KTX_TTF_RGB565 = 14,
        KTX_TTF_BGR565 = 15,
        KTX_TTF_RGBA4444 = 16,
        KTX_TTF_ETC = 22,
        KTX_TTF_BC1_OR_3 = 23,
        KTX_TTF_NOSELECTION = 0x7fffffff,
        KTX_TF_ETC1 = KTX_TTF_ETC1_RGB,
        KTX_TF_ETC2 = KTX_TTF_ETC,
        KTX_TF_BC1 = KTX_TTF_BC1_RGB,
        KTX_TF_BC3 = KTX_TTF_BC3_RGBA,
        KTX_TF_BC4 = KTX_TTF_BC4_R,
        KTX_TF_BC5 = KTX_TTF_BC5_RG,
        KTX_TTF_BC7_M6_RGB = KTX_TTF_BC7_RGBA,
        KTX_TTF_BC7_M5_RGBA = KTX_TTF_BC7_RGBA,
        KTX_TF_BC7_M6_OPAQUE_ONLY = KTX_TTF_BC7_RGBA,
        KTX_TF_PVRTC1_4_OPAQUE_ONLY = KTX_TTF_PVRTC1_4_RGB
} ktx_transcode_fmt_e;
typedef ktx_uint32_t ktx_transcode_flags;
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_TranscodeBasis(ktxTexture2* This, ktx_transcode_fmt_e fmt,
                           ktx_transcode_flags transcodeFlags);
KTX_API const char* KTX_APIENTRY
ktxErrorString(KTX_error_code error);
KTX_API const char* KTX_APIENTRY
ktxSupercompressionSchemeString(ktxSupercmpScheme scheme);
KTX_API const char* KTX_APIENTRY
ktxTranscodeFormatString(ktx_transcode_fmt_e format);
KTX_API KTX_error_code KTX_APIENTRY ktxHashList_Create(ktxHashList** ppHl);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_CreateCopy(ktxHashList** ppHl, ktxHashList orig);
KTX_API void KTX_APIENTRY ktxHashList_Construct(ktxHashList* pHl);
KTX_API void KTX_APIENTRY
ktxHashList_ConstructCopy(ktxHashList* pHl, ktxHashList orig);
KTX_API void KTX_APIENTRY ktxHashList_Destroy(ktxHashList* head);
KTX_API void KTX_APIENTRY ktxHashList_Destruct(ktxHashList* head);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_AddKVPair(ktxHashList* pHead, const char* key,
                      unsigned int valueLen, const void* value);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_DeleteEntry(ktxHashList* pHead,  ktxHashListEntry* pEntry);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_DeleteKVPair(ktxHashList* pHead, const char* key);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_FindEntry(ktxHashList* pHead, const char* key,
                      ktxHashListEntry** ppEntry);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_FindValue(ktxHashList* pHead, const char* key,
                      unsigned int* pValueLen, void** pValue);
KTX_API ktxHashListEntry* KTX_APIENTRY
ktxHashList_Next(ktxHashListEntry* entry);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_Sort(ktxHashList* pHead);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_Serialize(ktxHashList* pHead,
                      unsigned int* kvdLen, unsigned char** kvd);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashList_Deserialize(ktxHashList* pHead, unsigned int kvdLen, void* kvd);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashListEntry_GetKey(ktxHashListEntry* This,
                        unsigned int* pKeyLen, char** ppKey);
KTX_API KTX_error_code KTX_APIENTRY
ktxHashListEntry_GetValue(ktxHashListEntry* This,
                          unsigned int* pValueLen, void** ppValue);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintInfoForStdioStream(FILE* stdioStream);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintInfoForNamedFile(const char* const filename);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintInfoForMemory(const ktx_uint8_t* bytes, ktx_size_t size);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintKTX2InfoTextForMemory(const ktx_uint8_t* bytes, ktx_size_t size);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintKTX2InfoTextForNamedFile(const char* const filename);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintKTX2InfoTextForStdioStream(FILE* stdioStream);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintKTX2InfoTextForStream(ktxStream* stream);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintKTX2InfoJSONForMemory(const ktx_uint8_t* bytes, ktx_size_t size, ktx_uint32_t base_indent, ktx_uint32_t indent_width, bool minified);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintKTX2InfoJSONForNamedFile(const char* const filename, ktx_uint32_t base_indent, ktx_uint32_t indent_width, bool minified);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintKTX2InfoJSONForStdioStream(FILE* stdioStream, ktx_uint32_t base_indent, ktx_uint32_t indent_width, bool minified);
KTX_API KTX_error_code KTX_APIENTRY ktxPrintKTX2InfoJSONForStream(ktxStream* stream, ktx_uint32_t base_indent, ktx_uint32_t indent_width, bool minified);