KTXGen/Evergine.Bindings.KTX/Generated/Funtions.cs


		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CompressAstcEx(ktxTexture2* This, ktxAstcParams* params);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CompressAstc(ktxTexture2* This,  quality);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_DecodeAstc(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CompressBasisEx(ktxTexture2* This, ktxBasisParams* params);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_TranscodeBasis(ktxTexture2* This, ktx_transcode_fmt_e fmt,  transcodeFlags);

		/// <summary>
		/// Returns a string corresponding to a KTX error code.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* ktxErrorString(ktx_error_code_e error);

		/// <summary>
		/// Returns a string corresponding to a supercompression scheme.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* ktxSupercompressionSchemeString(ktxSupercmpScheme scheme);

		/// <summary>
		/// Returns a string corresponding to a transcode target format.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* ktxTranscodeFormatString(ktx_transcode_fmt_e format);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_Create(* ppHl);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_CreateCopy(* ppHl,  orig);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern void ktxHashList_Construct(* pHl);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern void ktxHashList_ConstructCopy(* pHl,  orig);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern void ktxHashList_Destroy(* head);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern void ktxHashList_Destruct(* head);

		/// <summary>
		/// Adds a key-value pair to a hash list.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_AddKVPair(* pHead, byte* key, uint valueLen, void* value);

		/// <summary>
		/// Deletes a ktxHashListEntry from a ktxHashList.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_DeleteEntry(* pHead, * pEntry);

		/// <summary>
		/// Finds the entry for a key in a ktxHashList and deletes it.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_DeleteKVPair(* pHead, byte* key);

		/// <summary>
		/// Looks up a key and returns the ktxHashListEntry.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_FindEntry(* pHead, byte* key, * ppEntry);

		/// <summary>
		/// Looks up a key and returns the value.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_FindValue(* pHead, byte* key, uint* pValueLen, void* pValue);

		/// <summary>
		/// Return the next entry in a ktxHashList.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern * ktxHashList_Next(* entry);

		/// <summary>
		/// Sorts a ktxHashList into order of the key codepoints.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_Sort(* pHead);

		/// <summary>
		/// Serializes a ktxHashList to a block of memory suitable for
		/// writing to a KTX file.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_Serialize(* pHead, uint* kvdLen, byte* kvd);

		/// <summary>
		/// Creates a hash table from the serialized data read from a
		/// a KTX file.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashList_Deserialize(* pHead, uint kvdLen, void* kvd);

		/// <summary>
		/// Get the key from a ktxHashListEntry
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashListEntry_GetKey(* This, uint* pKeyLen, byte* ppKey);

		/// <summary>
		/// Get the value from a ktxHashListEntry
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxHashListEntry_GetValue(* This, uint* pValueLen, void* ppValue);

		/// <summary>
		/// ===========================================================*
		/// Utilities for printing info about a KTX file.             *
		/// ===========================================================
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintInfoForStdioStream(* stdioStream);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintInfoForNamedFile(byte* filename);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintInfoForMemory(uint* bytes,  int size);

		/// <summary>
		/// ===========================================================*
		/// Utilities for printing info about a KTX2 file.            *
		/// ===========================================================
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintKTX2InfoTextForMemory(* bytes,  size);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintKTX2InfoTextForNamedFile(byte* filename);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintKTX2InfoTextForStdioStream(* stdioStream);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintKTX2InfoTextForStream(ktxStream* stream);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintKTX2InfoJSONForMemory(* bytes,  size,  base_indent,  indent_width, [MarshalAs(UnmanagedType.Bool)] bool minified);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintKTX2InfoJSONForNamedFile(byte* filename,  base_indent,  indent_width, [MarshalAs(UnmanagedType.Bool)] bool minified);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintKTX2InfoJSONForStdioStream(* stdioStream,  base_indent,  indent_width, [MarshalAs(UnmanagedType.Bool)] bool minified);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxPrintKTX2InfoJSONForStream(ktxStream* stream,  base_indent,  indent_width, [MarshalAs(UnmanagedType.Bool)] bool minified);

	}
}
